--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
-torch>=2.0.0
-torchvision>=0.15.0
-Pillow>=9.0.0
+torch>=1.9.0
+torchvision>=0.10.0
+Pillow>=8.0.0
 Flask>=2.0.0
 Werkzeug>=2.0.0
+numpy>=1.19.0
+
+# Development dependencies
+pytest>=6.0.0
+pytest-cov>=2.10.0
+black>=21.0.0
+flake8>=3.8.0
+isort>=5.0.0
+pre-commit>=2.10.0
